Fix alignment of scroll-top-button arrow animation.

--- a/src/styles/app/components/_scroll-top.scss
+++ b/src/styles/app/components/_scroll-top.scss
@@ -20,31 +20,22 @@
       background-color: rgba($nero, 1);
     }
     .icon-arrow {
-      path {
+      use {
         @include breakpoint($large) {
           @include animations($duration: 350ms, $name: strokeDash);
         }
-        &.arrow {
+        &.icon-arrow {
           &-center {
             @include breakpoint($large) {
-              stroke-dasharray: 59.5339241027832, 59.5339241027832;
-              stroke-dashoffset: 58;
+              stroke-dasharray: 90, 90;
+              stroke-dashoffset: 89;
             }
           }
           &-left, &-right {
             @include breakpoint($large) {
               animation-delay: 200ms;
-              stroke-dashoffset: 30;
-            }
-          }
-          &-left {
-            @include breakpoint($large) {
-              stroke-dasharray: 29.959726333618164, 29.959726333618164;
-            }
-          }
-          &-right {
-            @include breakpoint($large) {
-              stroke-dasharray: 29.945518493652344, 29.945518493652344;
+              stroke-dasharray: 50, 50;
+              stroke-dashoffset: 49;
             }
           }
         }
@@ -54,7 +45,7 @@
   &:focus, &:active {
     background-color: white;
     box-shadow: inset 0 0 0 1px $nero;
-    path {
+    use {
       stroke: $nero;
     }
   }
@@ -73,19 +64,29 @@
       @include breakpoint($medium) {
         @include size(24px);
       }
-      path {
+    }
+  }
+  .icon-arrow {
+    @include center-xy;
+    @include size(24px);
+    svg {
+      @include position(absolute, 0);
+      &:nth-child(1) {
+        z-index: 2;
+      }
+      &:nth-child(2) {
+        z-index: 3;
+      }
+      &:nth-child(3) {
+        z-index: 4;
+      }
+      use {
+        stroke: white;
         stroke-width: 5px;
         @include breakpoint($medium) {
           stroke-width: 3px;
         }
       }
     }
-  }
-  path {
-    stroke: white;
-  }
-  .icon-arrow {
-    @include center-xy;
-    @include size(24px);
   }
 }
